Overhauled design to paginate, better fontawesome support, featured images

--- a/layouts/old.index.html
+++ b/layouts/old.index.html
@@ -1,32 +1,32 @@
 {{ define "main" }}
 {{ $pages := where .Site.RegularPages "Type" "in" .Site.Params.mainSections }}
-
-{{ $pag := .Paginate (where $pages "Params.hidden" "ne" true) }}
+{{ $s := newScratch }}
+{{ $s.Set "offset" "0" }}
+{{ $pag := .Paginate (where $pages "Params.hidden" "ne" true) $.Site.Params.fpCount }}
 
 <main class="homepage container py-6">
     {{ if not $pag.HasPrev }}
+    {{ $s.Set "offset" "1" }}
     <!-- Hero -->
     {{ partial "hero.html" . }}
 
-    <!-- Featured articles -->
+    <!-- Featured article -->
     {{ range ($pag.Pages)}}
     {{ .Render "feat" }}
     {{ end }}
-
-    {{ else }}
+    <!--{{ partial "featured.html" . }}-->
+    {{ end }}
     <!-- Articles -->
     <div class="articles row row-cols-1 row-cols-lg-3">
-        {{ range ($pag.Pages)}}
+        {{ $offset := $s.Get "offset" }}
+        {{ range after $offset ($pag.Pages)}}
         <div class="col mb-3">
             {{ .Render "card" }}
         </div>
         {{ end }}
     </div>
-    {{ end }}
-
     <div class="paginator row row-cols-1">
         {{ template "partials/paginator.html" . }}
     </div>
-
 </main>
 {{ end }}
