--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -1,9 +1,9 @@
-{{ with index .Site.Data "chunky-poster" }}
-    {{ range $vendor := .assets }}
-        {{ if $vendor.js }}
-            <script src="{{ print "dist/" $vendor.js | relURL }}"></script>
-        {{ end }}
-    {{ end }}
+{{ with index .Site.Data "slender-poster" }}
+{{ range $vendor := .assets }}
+{{ if $vendor.js }}
+<script src="{{ print "dist/" $vendor.js | relURL }}"></script>
+{{ end }}
+{{ end }}
 {{ end }}
 
 {{ if .Site.Params.prismJS.enable }}
