--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,14 +6,14 @@
                     {{ if .Site.Params.social.rss -}}
                     <li class="list-inline-item">
                         {{- with .Site.GetPage "" -}}
-                            {{- with .OutputFormats.Get "RSS" -}}
-                                <a href="{{ .Permalink }}" rel="alternate" type="application/rss+xml" class="icons d-block">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fa fa-circle fa-stack-2x"></i>
-                                        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            {{- end -}}
+                        {{- with .OutputFormats.Get "RSS" -}}
+                        <a href="{{ .Permalink }}" rel="alternate" type="application/rss+xml" class="icons d-block">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        {{- end -}}
                         {{- end -}}
                     </li>
                     {{- end -}}
@@ -28,29 +28,31 @@
                     </li>
                     {{- end -}}
                     {{- range $name, $path := .Site.Params.social -}}
-                        {{- if and $path (not (in (slice "rss" "email") $name)) -}}
-                        <li class="list-inline-item">
-                            <a href="{{ $path | safeURL }}" class="icons d-block">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fab fa-{{ $name }} fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        {{- end -}}
+                    {{- if and $path (not (in (slice "rss" "email") $name)) -}}
+                    <li class="list-inline-item">
+                        <a href="{{ $path | safeURL }}" class="icons d-block">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fab fa-{{ $name }} fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+                    {{- end -}}
                     {{- end }}
                 </ul>
 
                 <p class="text-muted">
                     {{ if .Site.Copyright }}
-                        {{ .Site.Copyright | safeHTML }}
+                    {{ .Site.Copyright | safeHTML }}
                     {{ else }}
-                        Copyright &copy; {{ .Site.Title }} {{ now.Year }}
+                    Copyright &copy; {{ .Site.Title }} {{ now.Year }}
                     {{ end }}
                 </p>
 
-                <p class="text-muted">
-                Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with <a href="https://github.com/puresyntax71/hugo-theme-chunky-poster" target="_blank">Chunky Poster</a>.
+                <p class="text-muted" style="font-size: smaller;">
+                    Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with <a
+                        href="https://github.com/obviateio/hugo-slender-poster" target="_blank">Slender
+                        Poster</a>.
                 </p>
             </div>
         </div>
