--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,4 +3,4 @@
 @import "_variables";
 @import "~bootstrap/scss/bootstrap";
 @import '~ekko-lightbox/dist/ekko-lightbox.css';
-@import "chunky-poster";
+@import "slender-poster";
