--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer text-center bg-dark py-6">
+<footer class="footer text-center bg-dark py-4">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -41,7 +41,7 @@
                     {{- end }}
                 </ul>
 
-                <p class="text-muted">
+                <p class="text-muted" style="opacity: 80%;">
                     {{ if .Site.Copyright }}
                     {{ .Site.Copyright | safeHTML }}
                     {{ else }}
@@ -49,7 +49,7 @@
                     {{ end }}
                 </p>
 
-                <p class="text-muted" style="font-size: smaller;">
+                <p class="text-muted" style="font-size: smaller; opacity: 50%">
                     Powered by <a href="https://gohugo.io" target="_blank">Hugo</a> with <a
                         href="https://github.com/obviateio/hugo-slender-poster" target="_blank">Slender
                         Poster</a>.
