--- a/layouts/partials/paginator.html
+++ b/layouts/partials/paginator.html
@@ -1,30 +1,30 @@
 {{ $pag := $.Paginator }}
 {{ if gt $pag.TotalPages 1 }}
-<div>
+<div class="d-flex justify-content-center">
     <ul class="pagination">
         <li class="page-item page-first">
             {{ if $pag.HasPrev }}
 
-            <a {{ if $pag.HasPrev }}href="{{ $pag.First.URL }}" {{ end }} class="page-link" aria-label="First"><span
-                    aria-hidden="true"><i class="fa fa-fast-backward"></i> First page</span></a>
+            <a {{ if $pag.HasPrev }}href="{{ $pag.First.URL }}" {{ end }} class="page-link" aria-label="First Page"
+                style="text-decoration: none;"><i class="fa fa-fast-backward"></i> <i class="far fa-file-alt"></i></a>
             {{ end }}
         </li>
         <li class="page-item page-prev">
             {{ if $pag.HasPrev }}
-            <a {{ if $pag.HasPrev }}href="{{ $pag.Prev.URL }}" {{ end }} class="page-link" aria-label="Previous"><span
-                    aria-hidden="true"><i class="fa fa-step-backward"></i> Prev page</span></a>
+            <a {{ if $pag.HasPrev }}href="{{ $pag.Prev.URL }}" {{ end }} class="page-link" aria-label="Previous Page"
+                style="text-decoration: none;"><i class="fa fa-step-backward"></i> <i class="far fa-file-alt"></i></a>
             {{ end }}
         </li>
         <li class="page-item page-next">
             {{ if $pag.HasNext }}
-            <a {{ if $pag.HasNext }}href="{{ $pag.Next.URL }}" {{ end }} class="page-link" aria-label="Next"><span
-                    aria-hidden="true">Next page <i class="fa fa-step-forward"></i> </span></a>
+            <a {{ if $pag.HasNext }}href="{{ $pag.Next.URL }}" {{ end }} class="page-link" aria-label="Next Page"
+                style="text-decoration: none;"><i class="far fa-file-alt"></i> <i class="fa fa-step-forward"></i> </a>
             {{ end }}
         </li>
         <li class="page-item page-last">
             {{ if $pag.HasNext }}
-            <a {{ if $pag.HasNext }}href="{{ $pag.Last.URL }}" {{ end }} class="page-link" aria-label="Last"><span
-                    aria-hidden="true">Last page <i class="fa fa-fast-forward"></i></span></a>
+            <a {{ if $pag.HasNext }}href="{{ $pag.Last.URL }}" {{ end }} class="page-link" aria-label="Last Page"
+                style="text-decoration: none;"> <i class="far fa-file-alt"></i> <i class="fa fa-fast-forward"></i></a>
             {{ end }}
         </li>
     </ul>
