--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 author mb-0">
-                        {{ partial "authors.html" $page }}
+                        {{ partial "author.html" $page }}
                     </div>
                 </div>
                 <div class="row justify-content-center">
