--- a/layouts/author/list.html
+++ b/layouts/author/list.html
@@ -7,24 +7,25 @@
                     <div class="col-lg-8">
                         {{- $term := . -}}
                         {{- if $term.Params.images -}}
-                            {{- with .Resources.GetMatch (index $term.Params.images 0) -}}
-                                {{- $image := .Resize "300x" -}}
-                                <p class="text-center my-5">
-                                    <img data-src="{{ $image.RelPermalink }}" class="img-thumbnail rounded-circle" alt="{{ $term.Params.name }}">
-                                </p>
-                            {{- end -}}
+                        {{- with .Resources.GetMatch (index $term.Params.images 0) -}}
+                        {{- $image := .Resize "300x" -}}
+                        <p class="text-center my-5">
+                            <img data-src="{{ $image.RelPermalink }}" class="img-thumbnail rounded-circle"
+                                alt="{{ $term.Params.name }}">
+                        </p>
+                        {{- end -}}
                         {{- end -}}
 
                         {{- .Scratch.Set "name" .Title -}}
                         {{- if $term.Params.name -}}
-                            {{- .Scratch.Set "name" $term.Params.name -}}
+                        {{- .Scratch.Set "name" $term.Params.name -}}
                         {{- end -}}
                         <h2 class="mb-3">{{ .Scratch.Get "name" }}</h2>
 
                         {{- with $term.Params.twitter -}}
-                            <p class="text-muted">
-                                <a href="https://twitter.com/@{{ . | urlize }}">@{{ .}}</a>
-                            </p>
+                        <p class="text-muted">
+                            <a href="https://twitter.com/@{{ . | urlize }}">@{{ .}}</a>
+                        </p>
                         {{- end -}}
 
                         <div class="content">
@@ -37,7 +38,7 @@
                             {{- with .Data.Pages -}}
                             <ul>
                                 {{- range . -}}
-                                    <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+                                <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
                                 {{- end -}}
                             </ul>
                             {{ end }}
